# hello-vcpkg

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  hello.cpp  imgui.ini  profiler.txt  vcpkg-configuration.json  vcpkg.json
cmake/: googletest.cmake
ideas/: copilot said so.cpp
include/args/: args.h
include/ecs/: ecs.h  entity.h  scriptableentity.h
include/ecs/components/: audio.h  collider.h  component.h  nativescript.h  renderable.h  sprite.h  transform.h
include/editor/gui/: gui.h
include/errors/: errors.h
include/game/entities/: player.h
include/monitors/: monitors.h
include/scene/: scene.h
include/textures/: textures.h
include/utils/: memory.h
include/uuid/: uuid.h
libs/Editor/: CMakeLists.txt
libs/Editor/include/Editor/: core.h  filewatcher.h  guiappbar.h  guielement.h  guifont.h  guipanel.h  guiroot.h  guitext.h  guiview.h  pch.h  profiler.h  types.h  xmlparse.h
libs/Editor/src/: core.cpp  filewatcher.cpp  guiappbar.cpp  guielement.cpp  guipanel.cpp  guiroot.cpp  guitext.cpp  guiview.cpp  profiler.cpp  types.cpp  xmlparse.cpp
libs/Editor/tests/: editor.cpp  editor.xml  editor.yaml
libs/Logging/: CMakeLists.txt
libs/Logging/include/Logging/: core.hpp
libs/Logging/src/: core.cpp
libs/RlImgui/: CMakeLists.txt
resources/gui/: editor.xml
src/: args.cpp  ecs.cpp  entity.cpp  main.cpp  monitors.cpp  player.cpp  scene.cpp  scriptableentity.cpp  textures.cpp  uuid.cpp
src/components/: component.cpp  nativescript.cpp  sprite.cpp  transform.cpp
src/ecs/components/: renderable.cpp
src/editor/gui/: gui.cpp
triplets/: x64-clang-dynamic.cmake  x64-win-llvm.cmake
triplets/toolchains/: llvm.cmake
